fix add game button not centered

--- a/public/sass/list.sass
+++ b/public/sass/list.sass
@@ -39,7 +39,7 @@ ul.board-list
       border-radius: 50%
       position: relative
       padding: 0px
-      margin: 0px
+      margin: 0px auto
       box-shadow: $thumb-shad-off $thumb-shad-off $thumb-shad-clr
 
     .board-img
